# streaming-log-pipeline

./: .gitignore  Dockerfile.airflow  README.md  docker-compose.yml  main.py  pipeline.py  pyproject.toml  requirements.txt
dags/: fptplay_pipeline_dag.py
spark_jobs/: generate_fake_data.py  ingest.py  load.py  transform.py
sql/: analytics.sql  init.sql  schema.sql
